# CyBrain

./: README.md  cybrain.py  main.py  pyproject.toml
agents/: brain.py
agents/models/: vrains_autoencoder.onnx  vrains_autoencoder.onnx.data  vrains_gnn_model.pth
agents/utils/: encoders.pkl  scaler.pkl
dashboard/: app.py
scripts/: install_tetragon.sh
