[project]
name = "cybrain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "onnxruntime>=1.24.3",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.55.0",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
]
